third_party/rust/paste/tests/ui/unsupported-literal.stderr
error: unsupported literal
 --> tests/ui/unsupported-literal.rs:4:12
  |
4 |     fn [<x 1e+100 z>]() {}
  |            ^^^^^^

error: unsupported literal
  --> tests/ui/unsupported-literal.rs:10:12
   |
10 |     fn [<x b'y' z>]() {}
   |            ^^^^

error: unsupported literal
  --> tests/ui/unsupported-literal.rs:14:12
   |
14 |     fn [<x b"y" z>]() {}
   |            ^^^^

error: unsupported literal
  --> tests/ui/unsupported-literal.rs:18:12
   |
18 |     fn [<x br"y" z>]() {}
   |            ^^^^^
